# HowTheWorldWorks

./: agentic.py  groq_call.py  index.html  main.py  prompts.py  pydantic_classes.py  pyproject.toml  requirements.txt  tavily_search.py  utils.py
.github/workflows/: weekly-htww-digest.yml
data/: article.md  metadata.json
data/articles/: Impact of national electricity transmission grid design on renewable energy integration and price volatility2026-06-22  Why is the global shipping industry stuck to diesel vessels instead of adopting electric or hydrogen propulsion?2026-05-25  global carbon credit market industrial giants strategic decisions countries without emission caps2026-06-08  global financial system dependency on clearinghouses payment networks and impact of a failure2026-06-01  global grain trading network impact on local food prices and food security analysis2026-05-04  largest world ports cluster coastal regions influence global trade causes and impact2026-05-04  low‑orbit satellite constellations impact on global high‑speed internet distribution and underlying infrastructure2026-06-15  patent laws impact on access to life‑saving medicines in low‑income countries2026-04-27  rare earth deposits concentration impact global electronics market2026-05-18
